src/test/ui/never_type/issue-13352.stderr
error[E0277]: cannot add `()` to `usize`
  --> $DIR/issue-13352.rs:7:13
   |
LL |     2_usize + (loop {});
   |             ^ no implementation for `usize + ()`
   |
   = help: the trait `Add<()>` is not implemented for `usize`
   = help: the following implementations were found:
             <&'a usize as Add<usize>>
             <&usize as Add<&usize>>
             <usize as Add<&usize>>
             <usize as Add>
             <&'a f32 as Add<f32>>
             <&'a f64 as Add<f64>>
             <&'a i128 as Add<i128>>
             <&'a i16 as Add<i16>>
           and 48 others

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
